--- a/Project 2/Project 2.ipynb
+++ b/Project 2/Project 2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "50d54004",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3d77478c",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "98dd3b80",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "[73 rows x 18 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1d948814",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1a55e059",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5b0ddffd",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "[3087 rows x 15 columns]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8daa24b1",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "eecc4307",
    "metadata": {},
    "outputs": [],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "a15b8c27",
    "metadata": {},
    "outputs": [
@@ -739,8 +739,8 @@
       "Dep. Variable:              Attrition   No. Observations:                 3087\n",
       "Model:                          Logit   Df Residuals:                     3085\n",
       "Method:                           MLE   Df Model:                            1\n",
-      "Date:                Wed, 26 Nov 2025   Pseudo R-squ.:                 0.03869\n",
-      "Time:                        20:13:59   Log-Likelihood:                -1311.2\n",
+      "Date:                Thu, 27 Nov 2025   Pseudo R-squ.:                 0.03869\n",
+      "Time:                        13:58:58   Log-Likelihood:                -1311.2\n",
       "converged:                       True   LL-Null:                       -1364.0\n",
       "Covariance Type:            nonrobust   LLR p-value:                 9.299e-25\n",
       "==============================================================================\n",
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "e9ba9463",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "1b37e6f9",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "bd42ec73",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "f39a1514",
    "metadata": {},
    "outputs": [
@@ -926,8 +926,8 @@
      "output_type": "stream",
      "text": [
       "Optimization terminated successfully.\n",
-      "         Current function value: 0.672215\n",
-      "         Iterations 4\n",
+      "         Current function value: 0.668010\n",
+      "         Iterations 5\n",
       "\n",
       "=== f1 summary ===\n",
       "                           Logit Regression Results                           \n",
@@ -935,8 +935,8 @@
       "Dep. Variable:              Attrition   No. Observations:                 3087\n",
       "Model:                          Logit   Df Residuals:                     3085\n",
       "Method:                           MLE   Df Model:                            1\n",
-      "Date:                Wed, 26 Nov 2025   Pseudo R-squ.:                 0.03869\n",
-      "Time:                        20:27:32   Log-Likelihood:                -1311.2\n",
+      "Date:                Thu, 27 Nov 2025   Pseudo R-squ.:                 0.03869\n",
+      "Time:                        13:59:12   Log-Likelihood:                -1311.2\n",
       "converged:                       True   LL-Null:                       -1364.0\n",
       "Covariance Type:            nonrobust   LLR p-value:                 9.299e-25\n",
       "==============================================================================\n",
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "18ab271c",
    "metadata": {},
    "outputs": [
@@ -967,11 +967,11 @@
       "\n",
       "In-sample confusion matrix (threshold = 0.5):\n",
       "          Pred 0  Pred 1\n",
-      "Actual 0     275     223\n",
-      "Actual 1     172     326\n",
+      "Actual 0     262     236\n",
+      "Actual 1     156     342\n",
       "\n",
-      "Precision (train): 0.594\n",
-      "Recall (train):    0.655\n"
+      "Precision (train): 0.592\n",
+      "Recall (train):    0.687\n"
      ]
     }
    ],
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "d05bf55c",
    "metadata": {},
    "outputs": [
@@ -1025,35 +1025,14 @@
      "output_type": "stream",
      "text": [
       "Optimization terminated successfully.\n",
-      "         Current function value: 0.665019\n",
-      "         Iterations 5\n"
+      "         Current function value: 0.660135\n",
+      "         Iterations 5\n",
+      "1324.9888015127683\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<bound method BinaryResults.summary of <statsmodels.discrete.discrete_model.LogitResults object at 0x00000221019048D0>>,\n",
-       "              variable        VIF\n",
-       " 0               const  19.387201\n",
-       " 1                 Age   1.110994\n",
-       " 2    DistanceFromHome   1.010757\n",
-       " 3            JobLevel   1.008108\n",
-       " 4  NumCompaniesWorked   1.108393,\n",
-       "           Pred 0  Pred 1\n",
-       " Actual 0     270     228\n",
-       " Actual 1     176     322,\n",
-       " 0.5854545454545454,\n",
-       " 0.6465863453815262,\n",
-       " array([0.585     , 0.57788945, 0.57286432, 0.58291457, 0.59798995]))"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def log_regression_function(x_df, y_df, features):\n",
+    "def log_regression_function(x_df, y_df, x_val, y_val, features):\n",
     "    f1 = sm.Logit(y_df, sm.add_constant(x_df[features])).fit()\n",
     "    ### now that the Logit model has been created, VIF model table\n",
     "    def vif_table(model):\n",
@@ -1063,14 +1042,15 @@
     "        return pd.DataFrame({\"variable\": names, \"VIF\": vif_values})\n",
     "    vif_df = vif_table(f1)\n",
     "    ### now let us create a ROC/AUC/Precision/Recall\n",
-    "    train_probs = f1.predict(sm.add_constant(x_df[features]))\n",
-    "    train_pred_class = (train_probs >= 0.5).astype(int)\n",
+    "    val_probs = f1.predict(sm.add_constant(x_val[features]))\n",
+    "    val_probs_pred_class = (val_probs >= 0.5).astype(int)\n",
     "\n",
-    "    cm_train = confusion_matrix(y_df, train_pred_class)\n",
-    "    precision_train = precision_score(y_df, train_pred_class)\n",
-    "    recall_train = recall_score(y_df, train_pred_class)\n",
+    "    cm_val = confusion_matrix(y_val, val_probs_pred_class)\n",
+    "    precision_val = precision_score(y_val, val_probs_pred_class)\n",
+    "    recall_val = recall_score(y_val, val_probs_pred_class)\n",
     "    recall_df = pd.DataFrame(cm_train, index = ['Actual 0' , 'Actual 1'] , columns=['Pred 0' , 'Pred 1'])\n",
-    "\n",
+    "    aic = f1.aic\n",
+    "    auc = roc_auc_score(y_val , val_probs_pred_class)\n",
     "\n",
     "    # define 5-Fold Stratified CV ( preserve class proportions)\n",
     "    cv = StratifiedKFold( # sets up CV object\n",
@@ -1091,10 +1071,13 @@
     "        scoring=\"accuracy\"\n",
     "        )\n",
     "\n",
-    "    return f1.summary, vif_df , recall_df , precision_train, recall_train, scores_knn\n",
+    "    return aic , auc, vif_df , recall_val , precision_val, recall_val, scores_knn\n",
     "\n",
     "\n",
-    "log_regression_function(X_train_bal, y_train_bal , ['Age' , 'DistanceFromHome' , 'JobLevel' , 'NumCompaniesWorked'])"
+    "aic, auc, vif_df, recall_df, precision, recall, cv_scores = log_regression_function(X_train_bal, \n",
+    "y_train_bal , X_test_encoded, y_test,  ['Age' , 'DistanceFromHome' , 'JobLevel' , 'NumCompaniesWorked'])\n",
+    "\n",
+    "print(aic)"
    ]
   },
   {
@@ -1104,6 +1087,14 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad1fb78c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1148,46 +1139,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8dba6ed4",
-   "metadata": {},
-   "source": [
-    "### goal create a pipeline function "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "92b42e7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2685    0\n",
-       "3631    0\n",
-       "1365    0\n",
-       "3623    0\n",
-       "4390    0\n",
-       "       ..\n",
-       "3369    0\n",
-       "3858    0\n",
-       "743     0\n",
-       "808     0\n",
-       "1125    0\n",
-       "Name: Attrition, Length: 3087, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train"
-   ]
   },
   {
    "cell_type": "code",
